# mumble

./: .gitmodules  CLAUDE.md  CMakeLists.txt
.github/actions/install-dependencies/: install_windows_static_x86_64.sh
.github/workflows/: build.sh  build.yml  docker.yml  freebsd.yml
cmake/: os.cmake
src/mumble/: ALSAAudio.cpp  ASIOInput.cpp  AudioConfigDialog.cpp  AudioConfigDialog.h  AudioInput.cpp  AudioInput.h  AudioInput.ui  AudioInputAmplification.h  AudioInputSilence.h  AudioOutput.cpp  AudioOutput.ui  AudioOutputSpeech.cpp  AudioOutputSpeech.h  AudioReceiveProcessing.h  AudioStats.cpp  AudioStats.ui  CMakeLists.txt  ClientUser.cpp  ClientUser.h  ConfigDialog.cpp  ConfigWidget.h  Database.cpp  Database.h  DeepFilterNet.h  DeepFilterNetProcessing.cpp  DeepFilterNetProcessing.h  EchoCancelOption.cpp  EchoCancelOption.h  EnumStringConversions.cpp  EnumStringConversions.h  JSONSerialization.cpp  JSONSerialization.h  JackAudio.cpp  JackAudio.h  LookConfig.cpp  LookConfig.h  LookConfig.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  (+36 more)
src/mumble/widgets/: AvatarCropDialog.cpp  AvatarCropDialog.h  ConfigProfileBar.cpp  ConfigProfileBar.h  MultiSlider.cpp  MultiSlider.h  TrayIcon.cpp  TrayIcon.h
src/tests/: CMakeLists.txt
src/tests/TestAudioAmplification/: CMakeLists.txt  TestAudioAmplification.cpp
src/tests/TestAudioInputSilence/: CMakeLists.txt  TestAudioInputSilence.cpp
src/tests/TestAudioReceiveProcessing/: CMakeLists.txt  TestAudioReceiveProcessing.cpp
src/tests/TestDeepFilter/: CMakeLists.txt  TestDeepFilter.cpp
src/tests/TestMarkdown/: CMakeLists.txt  TestMarkdown.cpp
src/tests/TestMultiSlider/: CMakeLists.txt  TestMultiSlider.cpp
src/tests/TestMumbleProtocol/: TestMumbleProtocol.cpp
src/tests/TestSettingsJSONSerialization/: CMakeLists.txt  generate_test_case.py
src/tests/TestSettingsProfiles/: CMakeLists.txt  TestSettingsProfiles.cpp
src/tests/TestSettingsResilience/: CMakeLists.txt  TestSettingsResilience.cpp
themes/: DefaultTheme.qrc
